--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -25,6 +25,8 @@ footer
 		&:hover
 			color: $gris
 			text-decoration: none !important
+	@media (max-width: 991px)
+		padding-left: 15px
 
 .titulo-footer
 	font-family: $medium
@@ -78,7 +80,7 @@ a.item-footer
 		color: $gris
 		text-decoration: none
 	@media (max-width: 991px)
-		padding-left: 15px
+		// padding-left: 15px
 
 footer
 	.logoHuevo-container
