--- a/sass/_botones.sass
+++ b/sass/_botones.sass
@@ -19,9 +19,10 @@
 	margin-top: 40px
 	padding: 5px 15px 5px 10px
 	transition: 0.2s ease all
-	&:hover
+	&:hover, &:focus
 		text-decoration: none
 		color: #fff !important
 		background-color: rgba(0,0,0,0.5)
+		outline: none
 	span
 		font-size: 12px
