--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -70,7 +70,7 @@ $icomoon: "Icomoon"
 
 .icon-logoHuevo:before
 	content: "\e905"
-	color: #fff !important
+	// color: #fff !important
 
 .icon-facebook:before
 	content: "\e906"
