--- a/css/estilos.css
+++ b/css/estilos.css
@@ -615,16 +615,20 @@ footer .logoHuevo:hover {
   font-family: "Light";
   margin-left: 0 !important;
   margin-right: 0 !important;
-  margin-top: 50px;
-  color: #585756; }
+  color: #585756;
+  margin-top: 50px; }
   .login .row .form-group {
     width: 50%;
     margin-left: auto;
     margin-right: auto; }
+    @media (max-width: 575px) {
+      .login .row .form-group {
+        width: 80%; } }
   .login .row input {
     border-color: #959494;
     color: #959494;
-    padding: 6px 10px; }
+    padding: 6px 10px;
+    text-align: center; }
   .login .row .btn-default {
     margin-top: 20px; }
   .login .row h1 {
@@ -632,5 +636,10 @@ footer .logoHuevo:hover {
     .login .row h1 .icon-logoHuevo {
       color: #585756 !important;
       font-size: 100px; }
+      @media (max-width: 575px) {
+        .login .row h1 .icon-logoHuevo {
+          font-size: 70px; } }
+  .login .row .alert {
+    margin-top: 20px; }
 
 /*# sourceMappingURL=estilos.css.map */
