--- a/sass/back.sass
+++ b/sass/back.sass
@@ -1,5 +1,5 @@
 // -------------------------------------
-//             MAIN.SASS
+//             BACK.SASS
 // -------------------------------------
 
 // GHM Contenidos
@@ -12,7 +12,4 @@
 @import _fonts
 @import _mixins
 @import _botones
-@import _nav
-@import _index
-@import _fotografia
-@import _footer
+@import _login
