arreglando ajustes de diseño en el index

--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -100,6 +100,8 @@
 
 	// --- INTRO --- //
 	.index.intro
+		padding-top: 117.25px
+		padding-bottom: 117.25px
 		@media (max-width: 991px)
 			padding: 75px 0
 		.row
@@ -111,6 +113,8 @@
 	// --- HUEVO --- //
 	.huevo
 		background-color: #f2f2f2
+		padding-top: 54.25px
+		padding-bottom: 54.25px
 		@media (max-width: 991px)
 			padding: 95px 0
 		.row
