--- a/css/estilos.css
+++ b/css/estilos.css
@@ -363,16 +363,21 @@ a.lang.active {
         font-size: 12px; } }
 .index .clear {
   clear: both; }
-@media (max-width: 991px) {
-  .index .index.intro {
-    padding: 75px 0; } }
-.index .index.intro .row {
-  margin-right: 0;
-  margin-left: 0; }
-.index .index.intro .texto {
-  padding: 0 30px; }
+.index .index.intro {
+  padding-top: 117.25px;
+  padding-bottom: 117.25px; }
+  @media (max-width: 991px) {
+    .index .index.intro {
+      padding: 75px 0; } }
+  .index .index.intro .row {
+    margin-right: 0;
+    margin-left: 0; }
+  .index .index.intro .texto {
+    padding: 0 30px; }
 .index .huevo {
-  background-color: #f2f2f2; }
+  background-color: #f2f2f2;
+  padding-top: 54.25px;
+  padding-bottom: 54.25px; }
   @media (max-width: 991px) {
     .index .huevo {
       padding: 95px 0; } }
@@ -517,6 +522,9 @@ footer {
   margin-bottom: 30px !important;
   padding: 0;
   list-style-type: none !important; }
+  @media (max-width: 991px) {
+    .lista-footer {
+      margin-bottom: 15px !important; } }
 
 .lista-footer.redes {
   margin-top: 10px; }
