--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -16,6 +16,8 @@ footer
 	margin-bottom: 30px !important
 	padding: 0
 	list-style-type: none !important
+	@media (max-width: 991px)
+		margin-bottom: 15px !important
 .lista-footer.redes
 	margin-top: 10px
 	a
