--- a/sass/_diseno.sass
+++ b/sass/_diseno.sass
@@ -15,6 +15,7 @@
 	padding-left: 0px !important
 	padding-right: 0px !important
 	padding-bottom: 10px !important
+	margin: 0px !important
 	.row
 		margin: 0px !important
 		.slide-lp
@@ -29,6 +30,8 @@
 		&:hover, &:active, &:focus
 			background-color: $gris
 			border-color: $gris !important
-
+.row.diseno.d-digital
+	padding-bottom: 0px !important
+	
 .diseno.ultimo
 	padding-bottom: 0px !important
