--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -62,6 +62,11 @@ $icomoon: "Icomoon"
 .icon-chevron-thin-right:before
 	content: "\e902"
 
+.icon-chevron-thin-left:before
+	content: "\e902"
+.icon-chevron-thin-left
+	transform: rotateY(180deg)
+
 .icon-mouse:before
 	content: "\e903"
 
