--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -71,18 +71,17 @@ li.item-footer
 	color: #fff
 	@media (max-width: 991px)
 		padding-left: 15px
+		margin-bottom: 5px
 
 a.item-footer
 	text-decoration: none
 	font-family: $light
-	font-size: $FStexto
+	font-size: 14px
 	color: #fff
 	margin: 2px 0
 	&:hover
 		color: $gris
 		text-decoration: none
-	@media (max-width: 991px)
-		// padding-left: 15px
 
 footer
 	.logoHuevo-container
