--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,6 +36,12 @@
 .icon-chevron-thin-right:before {
   content: ""; }
 
+.icon-chevron-thin-left:before {
+  content: ""; }
+
+.icon-chevron-thin-left {
+  transform: rotateY(180deg); }
+
 .icon-mouse:before {
   content: ""; }
 
@@ -532,12 +538,49 @@ a.lang.active {
     .diseno .btn-default:hover, .diseno .btn-default:active, .diseno .btn-default:focus {
       background-color: #959494;
       border-color: #959494 !important; }
+  .diseno .carousel-control-prev, .diseno .carousel-control-next {
+    background-color: transparent;
+    width: 80px;
+    transition: ease 0.5s all; }
+    .diseno .carousel-control-prev:hover, .diseno .carousel-control-next:hover {
+      background-color: rgba(0, 0, 0, 0.2); }
+      @media (max-width: 991px) {
+        .diseno .carousel-control-prev:hover, .diseno .carousel-control-next:hover {
+          background-color: transparent; } }
+      .diseno .carousel-control-prev:hover .icon-chevron-thin-right, .diseno .carousel-control-prev:hover .icon-chevron-thin-left, .diseno .carousel-control-next:hover .icon-chevron-thin-right, .diseno .carousel-control-next:hover .icon-chevron-thin-left {
+        color: white; }
+    .diseno .carousel-control-prev .icon-chevron-thin-right, .diseno .carousel-control-prev .icon-chevron-thin-left, .diseno .carousel-control-next .icon-chevron-thin-right, .diseno .carousel-control-next .icon-chevron-thin-left {
+      color: transparent; }
+      @media (max-width: 991px) {
+        .diseno .carousel-control-prev .icon-chevron-thin-right, .diseno .carousel-control-prev .icon-chevron-thin-left, .diseno .carousel-control-next .icon-chevron-thin-right, .diseno .carousel-control-next .icon-chevron-thin-left {
+          color: #585756; } }
+    .diseno .carousel-control-prev .carousel-control-prev-icon, .diseno .carousel-control-prev .carousel-control-next-icon, .diseno .carousel-control-next .carousel-control-prev-icon, .diseno .carousel-control-next .carousel-control-next-icon {
+      background-image: none !important; }
 
 .row.diseno.d-digital {
   padding-bottom: 0px !important; }
 
 .diseno.ultimo {
   padding-bottom: 0px !important; }
+
+.scrollspy {
+  display: none;
+  background-color: transparent;
+  cursor: pointer;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  background-color: #fff;
+  width: 100%;
+  height: 30px;
+  z-index: 9999 !important;
+  box-shadow: 0px 2px 5px #959494; }
+  .scrollspy .texto {
+    padding-left: 50px !important;
+    line-height: 30px; }
+    @media (max-width: 991px) {
+      .scrollspy .texto {
+        padding-left: 0 !important; } }
 
 footer {
   background-color: #585756;
@@ -615,12 +658,13 @@ li.item-footer {
   color: #fff; }
   @media (max-width: 991px) {
     li.item-footer {
-      padding-left: 15px; } }
+      padding-left: 15px;
+      margin-bottom: 5px; } }
 
 a.item-footer {
   text-decoration: none;
   font-family: "Light";
-  font-size: 16px;
+  font-size: 14px;
   color: #fff;
   margin: 2px 0; }
   a.item-footer:hover {
