--- a/sass/_scrollspy.sass
+++ b/sass/_scrollspy.sass
@@ -23,8 +23,12 @@
 	height: 30px
 	z-index: 9999 !important
 	box-shadow: 0px 2px 5px $gris
+	padding-left: 0 !important
+	.scrollspy-container
+		padding-left: 0 !important
 	.texto
-		padding-left: 50px !important
+		// margin-left: 90px !important
+		padding-left: 7px !important
 		line-height: 30px
-		@media (max-width: 991px)
-			padding-left: 0 !important
+		@media (max-width: 621px)
+			padding-left: 10px !important
