--- a/css/estilos.css
+++ b/css/estilos.css
@@ -534,22 +534,25 @@ a.lang.active {
     right: 5%;
     bottom: 5%;
     background-color: #fff;
-    border-color: #fff; }
+    border-color: #fff;
+    z-index: 1000 !important; }
     .diseno .btn-default:hover, .diseno .btn-default:active, .diseno .btn-default:focus {
       background-color: #959494;
       border-color: #959494 !important; }
+  .diseno .carousel-control-prev {
+    justify-content: flex-start !important;
+    padding-left: 80px; }
+  .diseno .carousel-control-next {
+    justify-content: flex-end !important;
+    padding-right: 80px; }
   .diseno .carousel-control-prev, .diseno .carousel-control-next {
     background-color: transparent;
-    width: 80px;
+    width: 25%;
     transition: ease 0.5s all; }
-    .diseno .carousel-control-prev:hover, .diseno .carousel-control-next:hover {
-      background-color: rgba(0, 0, 0, 0.2); }
-      @media (max-width: 991px) {
-        .diseno .carousel-control-prev:hover, .diseno .carousel-control-next:hover {
-          background-color: transparent; } }
-      .diseno .carousel-control-prev:hover .icon-chevron-thin-right, .diseno .carousel-control-prev:hover .icon-chevron-thin-left, .diseno .carousel-control-next:hover .icon-chevron-thin-right, .diseno .carousel-control-next:hover .icon-chevron-thin-left {
-        color: white; }
+    .diseno .carousel-control-prev:hover .icon-chevron-thin-right, .diseno .carousel-control-prev:hover .icon-chevron-thin-left, .diseno .carousel-control-next:hover .icon-chevron-thin-right, .diseno .carousel-control-next:hover .icon-chevron-thin-left {
+      color: #585756; }
     .diseno .carousel-control-prev .icon-chevron-thin-right, .diseno .carousel-control-prev .icon-chevron-thin-left, .diseno .carousel-control-next .icon-chevron-thin-right, .diseno .carousel-control-next .icon-chevron-thin-left {
+      transition: ease 0.5s all;
       color: transparent; }
       @media (max-width: 991px) {
         .diseno .carousel-control-prev .icon-chevron-thin-right, .diseno .carousel-control-prev .icon-chevron-thin-left, .diseno .carousel-control-next .icon-chevron-thin-right, .diseno .carousel-control-next .icon-chevron-thin-left {
@@ -574,13 +577,16 @@ a.lang.active {
   width: 100%;
   height: 30px;
   z-index: 9999 !important;
-  box-shadow: 0px 2px 5px #959494; }
+  box-shadow: 0px 2px 5px #959494;
+  padding-left: 0 !important; }
+  .scrollspy .scrollspy-container {
+    padding-left: 0 !important; }
   .scrollspy .texto {
-    padding-left: 50px !important;
+    padding-left: 7px !important;
     line-height: 30px; }
-    @media (max-width: 991px) {
+    @media (max-width: 621px) {
       .scrollspy .texto {
-        padding-left: 0 !important; } }
+        padding-left: 10px !important; } }
 
 footer {
   background-color: #585756;
