--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -149,7 +149,9 @@
 			@media (max-width: 991px)
 				margin-bottom: 0 !important
 		figure
-			padding: 0 10px
+			padding: 0 30px
+			@media (max-width: 577px)
+				padding: 0 10px
 		.titulo-equipo
 			margin-top: 25px
 			margin-bottom: 0
