--- a/css/estilos.css
+++ b/css/estilos.css
@@ -421,7 +421,10 @@ a.lang.active {
     .index .equipo .fila:last-child {
       margin-bottom: 0 !important; } }
   .index .equipo figure {
-    padding: 0 10px; }
+    padding: 0 30px; }
+    @media (max-width: 577px) {
+      .index .equipo figure {
+        padding: 0 10px; } }
   .index .equipo .titulo-equipo {
     margin-top: 25px;
     margin-bottom: 0;
