--- a/sass/_botones.sass
+++ b/sass/_botones.sass
@@ -2,12 +2,8 @@
 //                BOTONES
 // -------------------------------------
 
-// CONTENIDO:
-// Estilos básicos para los botones
+// GHM Contenidos
 
-
-
-// --- ESTILOS BÁSICOS PARA LOS BOTONES --- //
 
 .btn-default
 	+border-radius(40px)
