--- a/sass/_diseno.sass
+++ b/sass/_diseno.sass
@@ -1,15 +1,9 @@
 // -------------------------------------
-//          NATURALEZA.SASS
+//               DISEÑO
 // -------------------------------------
 
 // GHM Contenidos
 
-// CONTENIDO:
-// Importación de archivos
-
-
-
-// --- IMPORTACIÓN DE ARCHIVOS --- //
 
 .diseno
 	padding-left: 0px !important
@@ -34,9 +28,13 @@
 	.carousel-control-prev
 		justify-content: flex-start !important
 		padding-left: 80px
+		@media (max-width: 576px)
+			padding-left: 30px
 	.carousel-control-next
 		justify-content: flex-end !important
 		padding-right: 80px
+		@media (max-width: 576px)
+			padding-right: 30px
 	.carousel-control-prev, .carousel-control-next
 		background-color: transparent
 		width: 25%
