--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -2,6 +2,8 @@
 //            TIPOGRAFIAS
 // -------------------------------------
 
+// GHM Contenidos
+
 // CONTENIDO:
 // Tipografias
 // Iconos vectoriales
