--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -3,8 +3,6 @@
 // -------------------------------------
 
 // CONTENIDO:
-// 
-
 
 
 footer
@@ -82,6 +80,9 @@ a.item-footer
 	&:hover
 		color: $gris
 		text-decoration: none
+
+.btn-monitoreo, .btn-monitoreo:hover
+	cursor: pointer
 
 footer
 	.logoHuevo-container
