--- a/sass/_fotografia.sass
+++ b/sass/_fotografia.sass
@@ -1,15 +1,11 @@
 // -------------------------------------
-//          NATURALEZA.SASS
+//             FOTOGRAFIA
 // -------------------------------------
 
 // GHM Contenidos
 
 // CONTENIDO:
-// Importación de archivos
 
-
-
-// --- IMPORTACIÓN DE ARCHIVOS --- //
 
 .fotografia
 	.bio
