--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -1,5 +1,5 @@
 // -------------------------------------
-//             INDEX.SASS
+//                INDEX
 // -------------------------------------
 
 // GHM Contenidos
