--- a/sass/_login.sass
+++ b/sass/_login.sass
@@ -1,10 +1,9 @@
 // -------------------------------------
-//             LOGIN.SASS
+//               LOGIN
 // -------------------------------------
 
 // GHM Contenidos
 
-// CONTENIDOS:
 
 .login
 	font-family: $light
