--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -2,7 +2,7 @@
 //              MIXINS
 // -------------------------------------
 
-// Mixins ordenados alfabeticamente.
+// GHM Contenidos
 
 
 =border-radius($borde)
