--- a/sass/_scrollbar.sass
+++ b/sass/_scrollbar.sass
@@ -1,14 +1,10 @@
 // -------------------------------------
-//          SCROLLBAR.SASS
+//            SCROLLBAR
 // -------------------------------------
 
 // GHM Contenidos
 
-// CONTENIDO:
-// 
 
-
-// --- IMPORTACIÓN DE ARCHIVOS --- //
 body::-webkit-scrollbar
 	background-color: #fff
 	width: 7px
