--- a/sass/_scrollspy.sass
+++ b/sass/_scrollspy.sass
@@ -1,15 +1,9 @@
 // -------------------------------------
-//          SCROLLSPY.SASS
+//              SCROLLSPY   
 // -------------------------------------
 
 // GHM Contenidos
 
-// CONTENIDO:
-// Importación de archivos
-
-
-
-// --- IMPORTACIÓN DE ARCHIVOS --- //
 
 .scrollspy 
 	display: none
@@ -24,11 +18,10 @@
 	z-index: 9999 !important
 	box-shadow: 0px 2px 5px $gris
 	padding-left: 0 !important
-	.scrollspy-container
-		padding-left: 0 !important
 	.texto
 		// margin-left: 90px !important
 		padding-left: 7px !important
 		line-height: 30px
+		text-align: left
 		@media (max-width: 621px)
 			padding-left: 10px !important
