--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -1,5 +1,5 @@
 // -------------------------------------
-//             NAV.SASS
+//                 NAV
 // -------------------------------------
 
 // GHM Contenidos
