termino de chequear los links de la seccion fotografia

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -65,7 +65,7 @@ div.class-aux.border-top
 
 li.item-footer
 	font-family: $light
-	font-size: $FStexto
+	font-size: 14px
 	color: #fff
 	@media (max-width: 991px)
 		padding-left: 15px
