--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -67,7 +67,7 @@
 	.video3:hover > .noticia,
 	.video4:hover > .noticia
 		height: calc(100% - 5px)
-		// visibility: visible
+		visibility: visible
 		color: #fff
 		background-color: rgba(0,0,0,.8)
 	.noticia
