empezando con el dashboard

--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -65,7 +65,7 @@ $icomoon: "Icomoon"
 	content: "\e902"
 
 .icon-chevron-thin-left:before
-	content: "\e902"
+	content: "\e902"		
 .icon-chevron-thin-left
 	transform: rotateY(180deg)
 
@@ -77,13 +77,24 @@ $icomoon: "Icomoon"
 
 .icon-logoHuevo:before
 	content: "\e905"
-	// color: #fff !important
 
 .icon-facebook:before
 	content: "\e906"
 
 .icon-instagram:before
 	content: "\e907"
+
+.icon-image:before 
+	content: "\e90d"
+
+.icon-key:before 
+	content: "\e98d"
+
+.icon-exit:before 
+	content: "\ea14"
+
+.icon-play2:before 
+	content: "\ea15"
 
 
 
