--- a/sass/_botones.sass
+++ b/sass/_botones.sass
@@ -19,6 +19,11 @@
 		text-decoration: none
 		color: #fff !important
 		background-color: rgba(0,0,0,0.5)
-		outline: none
+		outline: none !important
+		appearence: none !important
+		box-shadow: none !important
 	span
 		font-size: 12px
+input[type="file"]
+	font-family: $light
+	padding: 5px
