--- a/sass/_dashboardVideos.sass
+++ b/sass/_dashboardVideos.sass
@@ -10,15 +10,15 @@
 		padding-top: 20px
 		.btn-default
 			margin-top: 0
-			&:active
-				overline: none
+			&:active, &:focus
+				outline: none
 		video
 			width: 100%
 		form
 			padding: 10px
 			border: 1px dashed $gris
 			margin-top: 30px
-			.col-12.col-lg-4
+			.col-12.col-lg-6
 				// float: left
 				padding: 5px
 			.col-12
