armo un poco la estructura del dashboard

--- a/sass/_botones.sass
+++ b/sass/_botones.sass
@@ -22,9 +22,16 @@
 		outline: none !important
 		appearence: none !important
 		box-shadow: none !important
+		cursor: pointer
 	span
 		font-size: 12px
 
+.inputfile-container
+	position: relative
+	overflow: hidden
 input[type="file"]
 	font-family: $light
-	// margin: 5px
+	// left: -154px
+	// position: absolute
+	&:hover
+		cursor: pointer
