--- a/sass/_dashboardMenu.sass
+++ b/sass/_dashboardMenu.sass
@@ -16,7 +16,7 @@
 		min-width: 225px
 		min-height: 100vh
 		padding: 0
-		position: fixed
+		// position: fixed
 		.logo
 			padding: 20px 0
 			text-align: center
@@ -25,6 +25,7 @@
 			a:hover
 				color: #fff
 				text-decoration: none
+				cursor: pointer
 			.icon-logoHuevo
 				font-size: 48px	
 			
@@ -37,6 +38,7 @@
 				&:hover
 					background: $gris
 					text-decoration: none
+					cursor: pointer
 				i
 					margin-right: 20px
 					padding-bottom: 5px
