--- a/sass/_dashboardVideos.sass
+++ b/sass/_dashboardVideos.sass
@@ -8,7 +8,7 @@
 .dashboard
 	.carga-video
 		padding-top: 20px
-		margin-left: 225px
+		// margin-left: 225px
 		.btn-default
 			margin-top: 0
 			&:active, &:focus
@@ -38,7 +38,7 @@
 
 	.vista-previa
 		padding-top: 60px
-		margin-left: 225px
+		// margin-left: 225px
 		.btn-default
 			margin-top: 0
 			&:active, &:focus
