--- a/sass/back.sass
+++ b/sass/back.sass
@@ -14,4 +14,7 @@
 @import _botones
 @import _dashboardLogin
 @import _dashboardMenu
+@import _dashboardHome
 @import _dashboardVideos
+@import _dashboardPass
+@import _dashboardSlider
