agre form de edicion

--- a/sass/_botones.sass
+++ b/sass/_botones.sass
@@ -5,6 +5,7 @@
 // GHM Contenidos
 
 
+
 .btn-default
 	+border-radius(40px)
 	border: 1px solid $gris
@@ -31,7 +32,8 @@
 	overflow: hidden
 input[type="file"]
 	font-family: $light
-	// left: -154px
-	// position: absolute
 	&:hover
 		cursor: pointer
+
+input[type=name], input[type=password]
+	border-color: $gris
