--- a/sass/_dashboardPass.sass
+++ b/sass/_dashboardPass.sass
@@ -1,5 +1,5 @@
 // -------------------------------------
-//               LOGIN
+//               PASS
 // -------------------------------------
 
 // GHM Contenidos
