--- a/sass/_dashboardVideos.sass
+++ b/sass/_dashboardVideos.sass
@@ -15,24 +15,24 @@
 				outline: none
 		video
 			width: 100%
-		form
-			padding: 10px
-			border: 1px dashed $gris
-			margin-top: 30px
-			.col-12.col-lg-6, .col-12.d-flex.justify-content-between
-				padding: 5px
-			.col-12
-				padding: 0
-			input[type=text], textarea
-				width: 100%
-				font-family: $light
-				+border-radius(4px)
-				border: 1px solid $gris
-				padding: 5px
-			textarea
-				margin-top: 10px
-				resize: none
-				min-height: 83px
+	form
+		padding: 10px
+		border: 1px dashed $gris
+		margin-top: 30px !important
+		.col-12.col-lg-6, .col-12.d-flex.justify-content-between
+			padding: 5px
+		.col-12
+			padding: 0
+		input[type=text], textarea
+			width: 100%
+			font-family: $light
+			+border-radius(4px)
+			border: 1px solid $gris
+			padding: 5px
+		textarea
+			margin-top: 10px
+			resize: none
+			min-height: 83px
 
 
 
@@ -43,6 +43,8 @@
 			margin-top: 0
 			&:active, &:focus
 				outline: none
+		.btn-default.edicion
+			margin-left: 5px
 		.seccion-videos
 			border: 1px dashed $gris
 			padding: 15px 0 0px 0
