--- a/sass/_dashboardSlider.sass
+++ b/sass/_dashboardSlider.sass
@@ -12,3 +12,30 @@
 		margin: 0
 	.gestor-slider
 		padding-top: 20px
+	.img-cms
+		margin-top: 20px
+		padding: 0
+		h4
+			font-size: 28px
+			margin-bottom: 15px
+		p
+			padding-left: 0
+		.btn-default
+			margin-top: 20px
+			margin-bottom: 20px
+	.carga-slider
+		padding: 0 15px
+		.row
+			padding: 15px 0
+			border: 1px dashed $gris
+			.img-container
+				position: relative
+				button
+					position: absolute
+					top: 0px
+					right: 15px
+					background: rgba(0,0,0,0.8)
+					border: none
+					vertical-align: middle
+					span
+						color: #fff
