--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -53,18 +53,15 @@
 				width: 100%
 				height: 100%
 				z-index: 2 !important
-		.video1, .video2, .video3, .video4
+		.video-container
 			position: relative
 			cursor: pointer
 			height: 100%
-		.video1, .video3
+		.video-container:nth-child(odd)
 			margin-right: 5px
 			@media (max-width: 991px)
 				margin-right: 0
-	.video1:hover > .noticia,
-	.video2:hover > .noticia,
-	.video3:hover > .noticia,
-	.video4:hover > .noticia
+	.video-container:hover > .noticia
 		height: calc(100% - 5px)
 		visibility: visible
 		color: #fff
