terminando la seccion audiovisual

--- a/sass/_audiovisual.sass
+++ b/sass/_audiovisual.sass
@@ -6,6 +6,7 @@
 
 
 .audiovisual
+	margin-bottom: -5px
 	.audiovisual-video-container
 		padding: 0
 		position: relative
@@ -21,7 +22,6 @@
 			line-height: 500px
 			width: calc(100% - 2.5px)
 			height: calc(100% - 5px)
-			vertical-align: middle
 			@media (max-width: 991px)
 				width: calc(100% - 0px)
 	.audiovisual-video-container:nth-child(odd)
