--- a/sass/_audiovisual.sass
+++ b/sass/_audiovisual.sass
@@ -27,9 +27,9 @@
 	.audiovisual-video-container:nth-child(odd)
 		padding-right: 2.5px
 		@media (max-width: 991px)
-			padding-right: 0px
+			padding-right: 0px !important
 	.audiovisual-video-container:nth-child(even)
 		padding-left: 2.5px
 		@media (max-width: 991px)
-			padding-left: 0px
+			padding-left: 0px !important
 
