--- a/sass/_dashboardMenu.sass
+++ b/sass/_dashboardMenu.sass
@@ -56,3 +56,17 @@
 				i
 					padding: 20px !important
 					margin-right: 0px !important
+
+a.lp
+	position: absolute
+	bottom: 0
+	display: block
+	color: white
+	width: 100%
+	padding-top: 10px
+	padding-bottom: 10px
+	&:hover
+		text-decoration: none
+	i
+		padding-bottom: 3px
+		display: inline-block
