--- a/sass/_dashboardPass.sass
+++ b/sass/_dashboardPass.sass
@@ -14,15 +14,21 @@
 		padding-top: 20px
 		form
 			border: none
+		label
+			margin-top: 25px
+			font-family: $light
+			color: $gris
+			&:first-child
+				margin-top: 0px
 		input[type=password]
 			font-family: $light !important
 			display: block
 			border: 1px solid $gris
-			+border-radius(40px)
+			+border-radius(4px)
 			color: $gris
 			padding: 6px 10px
 			text-align: center
-			margin-top: 15px
+			// margin-top: 15px
 			@media (max-width: 575px)
 				width: 80%
 			&:focus
