--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -102,9 +102,14 @@ $icomoon: "Icomoon"
 .icon-exit:before 
 	content: "\ea14"
 
-.icon-play2:before 
+.icon-play2:before
 	content: "\ea15"
 
+.icon-display:before
+	content: "\e956"
+
+.icon-embed2:before
+	content: "\ea80"
 
 
 
