--- a/sass/_dashboardSlider.sass
+++ b/sass/_dashboardSlider.sass
@@ -28,6 +28,7 @@
 		.row
 			padding: 15px 0
 			border: 1px dashed $gris
+			margin-bottom: 30px
 			.img-container
 				position: relative
 				@media (max-width: 991px)
