--- a/sass/_dashboardVideos.sass
+++ b/sass/_dashboardVideos.sass
@@ -49,6 +49,7 @@
 			border: 1px dashed $gris
 			padding: 15px 0 0px 0
 			margin-top: 30px
+			margin-bottom: 30px
 		.video
 			position: relative
 			video
