--- a/sass/_dashboardHome.sass
+++ b/sass/_dashboardHome.sass
@@ -19,3 +19,7 @@
 			line-height: 100vh
 			@media (max-width: 870px)
 				font-size: 100px
+			@media (max-width: 575px)
+				font-size: 80px
+				height: calc(100vh - 88px - 57px)
+				line-height: calc(100vh - 88px - 57px)
